--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOMltPeTPA1x7FeAfQ+7vB2",
+      "authorship_tag": "ABX9TyOaAZX2V0wXgZM0tWj3TNHW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -529,12 +529,361 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import shutil"
+      ],
       "metadata": {
         "id": "Tc1mCz-V6-Vo"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(target_dir)\n"
+      ],
+      "metadata": {
+        "id": "qy7pngqLGQz3",
+        "outputId": "09706c87-9ea3-4e07-f1fa-a76c44ef2982",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "../data/pizz_sushi_steak_10_precent\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for data_split in label_splits.keys():\n",
+        "    for image_path in label_splits[str(data_split)]:\n",
+        "        dest_dir ="
+      ],
+      "metadata": {
+        "id": "attYzGFxFhKI",
+        "outputId": "8f759a26-ddfb-464d-d2f0-a3375546dafb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "../data/food-101/images/pizza/3269634.jpg\n",
+            "../data/food-101/images/pizza/1524655.jpg\n",
+            "../data/food-101/images/steak/2825100.jpg\n",
+            "../data/food-101/images/steak/225990.jpg\n",
+            "../data/food-101/images/steak/1839481.jpg\n",
+            "../data/food-101/images/pizza/38349.jpg\n",
+            "../data/food-101/images/pizza/3018077.jpg\n",
+            "../data/food-101/images/sushi/93139.jpg\n",
+            "../data/food-101/images/pizza/2702825.jpg\n",
+            "../data/food-101/images/sushi/200025.jpg\n",
+            "../data/food-101/images/pizza/1654444.jpg\n",
+            "../data/food-101/images/pizza/1633289.jpg\n",
+            "../data/food-101/images/pizza/2811032.jpg\n",
+            "../data/food-101/images/steak/1736968.jpg\n",
+            "../data/food-101/images/steak/2013535.jpg\n",
+            "../data/food-101/images/sushi/385154.jpg\n",
+            "../data/food-101/images/pizza/1572608.jpg\n",
+            "../data/food-101/images/steak/1382427.jpg\n",
+            "../data/food-101/images/sushi/929471.jpg\n",
+            "../data/food-101/images/sushi/1957449.jpg\n",
+            "../data/food-101/images/steak/1787505.jpg\n",
+            "../data/food-101/images/sushi/2590819.jpg\n",
+            "../data/food-101/images/steak/2880035.jpg\n",
+            "../data/food-101/images/pizza/1089334.jpg\n",
+            "../data/food-101/images/pizza/68684.jpg\n",
+            "../data/food-101/images/sushi/2017378.jpg\n",
+            "../data/food-101/images/steak/482022.jpg\n",
+            "../data/food-101/images/steak/2878151.jpg\n",
+            "../data/food-101/images/pizza/618348.jpg\n",
+            "../data/food-101/images/steak/167069.jpg\n",
+            "../data/food-101/images/steak/421476.jpg\n",
+            "../data/food-101/images/pizza/300869.jpg\n",
+            "../data/food-101/images/pizza/2785084.jpg\n",
+            "../data/food-101/images/sushi/1221830.jpg\n",
+            "../data/food-101/images/pizza/2885050.jpg\n",
+            "../data/food-101/images/steak/830007.jpg\n",
+            "../data/food-101/images/steak/560503.jpg\n",
+            "../data/food-101/images/steak/2603058.jpg\n",
+            "../data/food-101/images/pizza/1899785.jpg\n",
+            "../data/food-101/images/sushi/2813454.jpg\n",
+            "../data/food-101/images/sushi/773725.jpg\n",
+            "../data/food-101/images/pizza/3505182.jpg\n",
+            "../data/food-101/images/sushi/1209865.jpg\n",
+            "../data/food-101/images/pizza/2569760.jpg\n",
+            "../data/food-101/images/steak/3142045.jpg\n",
+            "../data/food-101/images/steak/914570.jpg\n",
+            "../data/food-101/images/steak/1264154.jpg\n",
+            "../data/food-101/images/pizza/2428085.jpg\n",
+            "../data/food-101/images/pizza/1947572.jpg\n",
+            "../data/food-101/images/steak/1937872.jpg\n",
+            "../data/food-101/images/steak/3074367.jpg\n",
+            "../data/food-101/images/pizza/2576168.jpg\n",
+            "../data/food-101/images/steak/2017387.jpg\n",
+            "../data/food-101/images/pizza/2992084.jpg\n",
+            "../data/food-101/images/sushi/2674024.jpg\n",
+            "../data/food-101/images/steak/97656.jpg\n",
+            "../data/food-101/images/pizza/739735.jpg\n",
+            "../data/food-101/images/sushi/1070104.jpg\n",
+            "../data/food-101/images/steak/75537.jpg\n",
+            "../data/food-101/images/steak/1598345.jpg\n",
+            "../data/food-101/images/steak/2629750.jpg\n",
+            "../data/food-101/images/pizza/2451169.jpg\n",
+            "../data/food-101/images/pizza/853441.jpg\n",
+            "../data/food-101/images/sushi/765684.jpg\n",
+            "../data/food-101/images/steak/2254705.jpg\n",
+            "../data/food-101/images/pizza/741883.jpg\n",
+            "../data/food-101/images/sushi/2871052.jpg\n",
+            "../data/food-101/images/sushi/121940.jpg\n",
+            "../data/food-101/images/steak/2707522.jpg\n",
+            "../data/food-101/images/steak/176508.jpg\n",
+            "../data/food-101/images/steak/3727491.jpg\n",
+            "../data/food-101/images/pizza/2154394.jpg\n",
+            "../data/food-101/images/steak/1966300.jpg\n",
+            "../data/food-101/images/pizza/1660415.jpg\n",
+            "../data/food-101/images/steak/3577618.jpg\n",
+            "../data/food-101/images/sushi/1575445.jpg\n",
+            "../data/food-101/images/steak/2648423.jpg\n",
+            "../data/food-101/images/pizza/2330965.jpg\n",
+            "../data/food-101/images/steak/1615395.jpg\n",
+            "../data/food-101/images/steak/355715.jpg\n",
+            "../data/food-101/images/steak/1624747.jpg\n",
+            "../data/food-101/images/sushi/3737197.jpg\n",
+            "../data/food-101/images/sushi/148799.jpg\n",
+            "../data/food-101/images/sushi/2797464.jpg\n",
+            "../data/food-101/images/pizza/393658.jpg\n",
+            "../data/food-101/images/steak/2606444.jpg\n",
+            "../data/food-101/images/steak/2287136.jpg\n",
+            "../data/food-101/images/sushi/821108.jpg\n",
+            "../data/food-101/images/steak/2561199.jpg\n",
+            "../data/food-101/images/sushi/2120573.jpg\n",
+            "../data/food-101/images/sushi/1552504.jpg\n",
+            "../data/food-101/images/steak/922752.jpg\n",
+            "../data/food-101/images/steak/1761285.jpg\n",
+            "../data/food-101/images/pizza/3821701.jpg\n",
+            "../data/food-101/images/sushi/424994.jpg\n",
+            "../data/food-101/images/sushi/3579071.jpg\n",
+            "../data/food-101/images/pizza/2760984.jpg\n",
+            "../data/food-101/images/pizza/1968947.jpg\n",
+            "../data/food-101/images/pizza/320570.jpg\n",
+            "../data/food-101/images/pizza/5764.jpg\n",
+            "../data/food-101/images/pizza/702165.jpg\n",
+            "../data/food-101/images/sushi/2004525.jpg\n",
+            "../data/food-101/images/pizza/2285942.jpg\n",
+            "../data/food-101/images/sushi/1280119.jpg\n",
+            "../data/food-101/images/sushi/1232045.jpg\n",
+            "../data/food-101/images/sushi/3004029.jpg\n",
+            "../data/food-101/images/sushi/700405.jpg\n",
+            "../data/food-101/images/steak/239025.jpg\n",
+            "../data/food-101/images/pizza/12301.jpg\n",
+            "../data/food-101/images/pizza/3338774.jpg\n",
+            "../data/food-101/images/sushi/794647.jpg\n",
+            "../data/food-101/images/steak/2628106.jpg\n",
+            "../data/food-101/images/steak/3142674.jpg\n",
+            "../data/food-101/images/sushi/2267190.jpg\n",
+            "../data/food-101/images/pizza/667309.jpg\n",
+            "../data/food-101/images/sushi/268990.jpg\n",
+            "../data/food-101/images/pizza/1044789.jpg\n",
+            "../data/food-101/images/steak/256592.jpg\n",
+            "../data/food-101/images/sushi/377047.jpg\n",
+            "../data/food-101/images/pizza/928670.jpg\n",
+            "../data/food-101/images/sushi/390178.jpg\n",
+            "../data/food-101/images/pizza/3109486.jpg\n",
+            "../data/food-101/images/steak/3245622.jpg\n",
+            "../data/food-101/images/sushi/1138695.jpg\n",
+            "../data/food-101/images/pizza/715169.jpg\n",
+            "../data/food-101/images/sushi/843815.jpg\n",
+            "../data/food-101/images/sushi/710379.jpg\n",
+            "../data/food-101/images/pizza/1008844.jpg\n",
+            "../data/food-101/images/steak/3727036.jpg\n",
+            "../data/food-101/images/sushi/3426958.jpg\n",
+            "../data/food-101/images/pizza/138855.jpg\n",
+            "../data/food-101/images/pizza/3281494.jpg\n",
+            "../data/food-101/images/steak/937133.jpg\n",
+            "../data/food-101/images/steak/339891.jpg\n",
+            "../data/food-101/images/steak/214320.jpg\n",
+            "../data/food-101/images/pizza/218711.jpg\n",
+            "../data/food-101/images/steak/2163079.jpg\n",
+            "../data/food-101/images/pizza/2687575.jpg\n",
+            "../data/food-101/images/sushi/3360232.jpg\n",
+            "../data/food-101/images/pizza/2426686.jpg\n",
+            "../data/food-101/images/sushi/748830.jpg\n",
+            "../data/food-101/images/pizza/3530210.jpg\n",
+            "../data/food-101/images/pizza/3589437.jpg\n",
+            "../data/food-101/images/sushi/3107839.jpg\n",
+            "../data/food-101/images/pizza/765799.jpg\n",
+            "../data/food-101/images/steak/2614189.jpg\n",
+            "../data/food-101/images/sushi/686426.jpg\n",
+            "../data/food-101/images/sushi/2021381.jpg\n",
+            "../data/food-101/images/steak/1621763.jpg\n",
+            "../data/food-101/images/sushi/840444.jpg\n",
+            "../data/food-101/images/steak/1413972.jpg\n",
+            "../data/food-101/images/steak/3518960.jpg\n",
+            "../data/food-101/images/sushi/1551817.jpg\n",
+            "../data/food-101/images/sushi/1129338.jpg\n",
+            "../data/food-101/images/sushi/2323548.jpg\n",
+            "../data/food-101/images/sushi/542188.jpg\n",
+            "../data/food-101/images/sushi/2641778.jpg\n",
+            "../data/food-101/images/pizza/3441394.jpg\n",
+            "../data/food-101/images/steak/231296.jpg\n",
+            "../data/food-101/images/steak/1849463.jpg\n",
+            "../data/food-101/images/pizza/2291093.jpg\n",
+            "../data/food-101/images/steak/443210.jpg\n",
+            "../data/food-101/images/pizza/1412034.jpg\n",
+            "../data/food-101/images/steak/1976160.jpg\n",
+            "../data/food-101/images/pizza/1105700.jpg\n",
+            "../data/food-101/images/pizza/244505.jpg\n",
+            "../data/food-101/images/pizza/220190.jpg\n",
+            "../data/food-101/images/steak/1961025.jpg\n",
+            "../data/food-101/images/pizza/2382016.jpg\n",
+            "../data/food-101/images/pizza/1649276.jpg\n",
+            "../data/food-101/images/steak/3857508.jpg\n",
+            "../data/food-101/images/sushi/497686.jpg\n",
+            "../data/food-101/images/steak/2129685.jpg\n",
+            "../data/food-101/images/steak/2881783.jpg\n",
+            "../data/food-101/images/sushi/3353428.jpg\n",
+            "../data/food-101/images/steak/165639.jpg\n",
+            "../data/food-101/images/pizza/3699992.jpg\n",
+            "../data/food-101/images/sushi/307738.jpg\n",
+            "../data/food-101/images/steak/2222018.jpg\n",
+            "../data/food-101/images/sushi/3081701.jpg\n",
+            "../data/food-101/images/sushi/170385.jpg\n",
+            "../data/food-101/images/steak/1225762.jpg\n",
+            "../data/food-101/images/pizza/2821048.jpg\n",
+            "../data/food-101/images/pizza/2885796.jpg\n",
+            "../data/food-101/images/sushi/2175561.jpg\n",
+            "../data/food-101/images/steak/735441.jpg\n",
+            "../data/food-101/images/sushi/2021685.jpg\n",
+            "../data/food-101/images/sushi/17704.jpg\n",
+            "../data/food-101/images/sushi/2980779.jpg\n",
+            "../data/food-101/images/pizza/2121603.jpg\n",
+            "../data/food-101/images/pizza/29417.jpg\n",
+            "../data/food-101/images/pizza/2228322.jpg\n",
+            "../data/food-101/images/sushi/1615453.jpg\n",
+            "../data/food-101/images/steak/461689.jpg\n",
+            "../data/food-101/images/pizza/3196721.jpg\n",
+            "../data/food-101/images/steak/2324994.jpg\n",
+            "../data/food-101/images/steak/1257104.jpg\n",
+            "../data/food-101/images/sushi/2574453.jpg\n",
+            "../data/food-101/images/pizza/3860002.jpg\n",
+            "../data/food-101/images/steak/100135.jpg\n",
+            "../data/food-101/images/sushi/2873571.jpg\n",
+            "../data/food-101/images/steak/234626.jpg\n",
+            "../data/food-101/images/pizza/2493954.jpg\n",
+            "../data/food-101/images/sushi/2492146.jpg\n",
+            "../data/food-101/images/pizza/2924941.jpg\n",
+            "../data/food-101/images/pizza/2026009.jpg\n",
+            "../data/food-101/images/sushi/855721.jpg\n",
+            "../data/food-101/images/pizza/1285298.jpg\n",
+            "../data/food-101/images/pizza/2800325.jpg\n",
+            "../data/food-101/images/steak/2087958.jpg\n",
+            "../data/food-101/images/pizza/786995.jpg\n",
+            "../data/food-101/images/sushi/169392.jpg\n",
+            "../data/food-101/images/sushi/3360207.jpg\n",
+            "../data/food-101/images/sushi/3251688.jpg\n",
+            "../data/food-101/images/steak/1647351.jpg\n",
+            "../data/food-101/images/sushi/1571146.jpg\n",
+            "../data/food-101/images/pizza/2190018.jpg\n",
+            "../data/food-101/images/pizza/764429.jpg\n",
+            "../data/food-101/images/sushi/1214108.jpg\n",
+            "../data/food-101/images/pizza/1033251.jpg\n",
+            "../data/food-101/images/sushi/14046.jpg\n",
+            "../data/food-101/images/steak/2614649.jpg\n",
+            "../data/food-101/images/sushi/2720223.jpg\n",
+            "../data/food-101/images/steak/2979061.jpg\n",
+            "../data/food-101/images/sushi/2019344.jpg\n",
+            "../data/food-101/images/sushi/684266.jpg\n",
+            "../data/food-101/images/sushi/988559.jpg\n",
+            "../data/food-101/images/sushi/1987407.jpg\n",
+            "../data/food-101/images/sushi/3837522.jpg\n",
+            "../data/food-101/images/sushi/887831.jpg\n",
+            "../data/food-101/images/steak/966174.jpg\n",
+            "../data/food-101/images/pizza/344397.jpg\n",
+            "../data/food-101/images/pizza/416067.jpg\n",
+            "../data/food-101/images/steak/1868005.jpg\n",
+            "../data/food-101/images/pizza/714866.jpg\n",
+            "../data/food-101/images/pizza/194643.jpg\n",
+            "../data/food-101/images/sushi/2394442.jpg\n",
+            "../data/food-101/images/sushi/1742201.jpg\n",
+            "../data/food-101/images/pizza/195160.jpg\n",
+            "../data/food-101/images/steak/2117351.jpg\n",
+            "../data/food-101/images/pizza/1925494.jpg\n",
+            "../data/food-101/images/pizza/1687143.jpg\n",
+            "../data/food-101/images/sushi/2540511.jpg\n",
+            "../data/food-101/images/steak/894825.jpg\n",
+            "../data/food-101/images/sushi/1172255.jpg\n",
+            "../data/food-101/images/sushi/1600999.jpg\n",
+            "../data/food-101/images/pizza/3475871.jpg\n",
+            "../data/food-101/images/sushi/1245193.jpg\n",
+            "../data/food-101/images/pizza/2218680.jpg\n",
+            "../data/food-101/images/pizza/398345.jpg\n",
+            "../data/food-101/images/pizza/2019408.jpg\n",
+            "../data/food-101/images/sushi/2741434.jpg\n",
+            "../data/food-101/images/pizza/2003290.jpg\n",
+            "../data/food-101/images/sushi/499605.jpg\n",
+            "../data/food-101/images/pizza/930553.jpg\n",
+            "../data/food-101/images/steak/354513.jpg\n",
+            "../data/food-101/images/pizza/2871261.jpg\n",
+            "../data/food-101/images/sushi/2276986.jpg\n",
+            "../data/food-101/images/steak/1016217.jpg\n",
+            "../data/food-101/images/sushi/2385731.jpg\n",
+            "../data/food-101/images/sushi/2715127.jpg\n",
+            "../data/food-101/images/pizza/1503858.jpg\n",
+            "../data/food-101/images/sushi/3177743.jpg\n",
+            "../data/food-101/images/pizza/2236338.jpg\n",
+            "../data/food-101/images/steak/3873283.jpg\n",
+            "../data/food-101/images/sushi/3806282.jpg\n",
+            "../data/food-101/images/sushi/2521706.jpg\n",
+            "../data/food-101/images/sushi/2190404.jpg\n",
+            "../data/food-101/images/sushi/1434806.jpg\n",
+            "../data/food-101/images/steak/2144308.jpg\n",
+            "../data/food-101/images/steak/1285886.jpg\n",
+            "../data/food-101/images/pizza/540882.jpg\n",
+            "../data/food-101/images/sushi/46797.jpg\n",
+            "../data/food-101/images/sushi/858157.jpg\n",
+            "../data/food-101/images/pizza/971934.jpg\n",
+            "../data/food-101/images/steak/1302563.jpg\n",
+            "../data/food-101/images/steak/3424937.jpg\n",
+            "../data/food-101/images/pizza/3092704.jpg\n",
+            "../data/food-101/images/sushi/479711.jpg\n",
+            "../data/food-101/images/sushi/343036.jpg\n",
+            "../data/food-101/images/steak/1882831.jpg\n",
+            "../data/food-101/images/steak/673127.jpg\n",
+            "../data/food-101/images/pizza/2111981.jpg\n",
+            "../data/food-101/images/pizza/1152100.jpg\n",
+            "../data/food-101/images/steak/690177.jpg\n",
+            "../data/food-101/images/sushi/3196729.jpg\n",
+            "../data/food-101/images/sushi/207578.jpg\n",
+            "../data/food-101/images/pizza/2508636.jpg\n",
+            "../data/food-101/images/pizza/2124579.jpg\n",
+            "../data/food-101/images/sushi/1680893.jpg\n",
+            "../data/food-101/images/pizza/648055.jpg\n",
+            "../data/food-101/images/sushi/1230335.jpg\n",
+            "../data/food-101/images/pizza/309892.jpg\n",
+            "../data/food-101/images/steak/27415.jpg\n",
+            "../data/food-101/images/steak/100274.jpg\n",
+            "../data/food-101/images/steak/296375.jpg\n",
+            "../data/food-101/images/steak/1627703.jpg\n",
+            "../data/food-101/images/steak/502076.jpg\n",
+            "../data/food-101/images/sushi/175783.jpg\n",
+            "../data/food-101/images/sushi/719108.jpg\n"
+          ]
+        }
+      ]
     }
   ]
 }
