--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyNtp16yPjy8u7M1BbkSjQv0",
+      "authorship_tag": "ABX9TyN0bn84rhjfL4TwT4FNyga+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -890,6 +889,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Trace directories\n",
+        "\n",
+        "def trace_dir(dir_path):\n",
+        "    \"\"\"\n",
+        "    Walk through directories printing its contents.\n",
+        "\n",
+        "    Args:\n",
+        "        dir_path(str): target directory\n",
+        "\n",
+        "    Returns:\n",
+        "        A print out of:\n",
+        ""
+      ],
+      "metadata": {
+        "id": "qdaOA09GXGBC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
