--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0bn84rhjfL4TwT4FNyga+",
+      "authorship_tag": "ABX9TyP0A+tceNCaT1W/eE/xw3he",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -900,14 +900,31 @@
         "    Walk through directories printing its contents.\n",
         "\n",
         "    Args:\n",
-        "        dir_path(str): target directory\n",
+        "        dir_path (str): target directory\n",
         "\n",
         "    Returns:\n",
         "        A print out of:\n",
-        ""
+        "            number of subdirectories in dir_path\n",
+        "            number of images (files) in each subdirectory\n",
+        "            number of each subdirectory\n",
+        "    \"\"\"\n",
+        "\n",
+        "    import os\n",
+        "\n",
+        "    for subdir_path, subdir_names, file_names in os.walk(dir_path):\n",
+        "        print(f\"There are {len(subdir_names)} and {len(file_names)} images in '{subdir_path}'\")"
       ],
       "metadata": {
         "id": "qdaOA09GXGBC"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7-tHqVTchTEm"
       },
       "execution_count": null,
       "outputs": []
