--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0A+tceNCaT1W/eE/xw3he",
+      "authorship_tag": "ABX9TyN4sIOw7jPtsoV5NEgfMmFs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -922,12 +922,66 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "trace_dir(target_dir)"
+      ],
       "metadata": {
-        "id": "7-tHqVTchTEm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7-tHqVTchTEm",
+        "outputId": "e5aabdb9-8698-42f9-bd2d-7a63179b4d3f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 2 and 0 images in '../data/pizz_sushi_steak_10_precent'\n",
+            "There are 3 and 0 images in '../data/pizz_sushi_steak_10_precent/test'\n",
+            "There are 0 and 31 images in '../data/pizz_sushi_steak_10_precent/test/sushi'\n",
+            "There are 0 and 19 images in '../data/pizz_sushi_steak_10_precent/test/steak'\n",
+            "There are 0 and 25 images in '../data/pizz_sushi_steak_10_precent/test/pizza'\n",
+            "There are 3 and 0 images in '../data/pizz_sushi_steak_10_precent/train'\n",
+            "There are 0 and 72 images in '../data/pizz_sushi_steak_10_precent/train/sushi'\n",
+            "There are 0 and 75 images in '../data/pizz_sushi_steak_10_precent/train/steak'\n",
+            "There are 0 and 78 images in '../data/pizz_sushi_steak_10_precent/train/pizza'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Zipping up images folder"
+      ],
+      "metadata": {
+        "id": "JMwPG4xKo_8X"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(data_dir)"
+      ],
+      "metadata": {
+        "id": "FOYniYGnn8gy",
+        "outputId": "7019c6c7-c57c-4dd9-fdfa-628470d5f29c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "../data\n"
+          ]
+        }
+      ]
     }
   ]
 }
