--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMe5ryTlTQKYoMeHKI+8bUc",
+      "authorship_tag": "ABX9TyNandLjfOXyKVj00TPsE8h+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1390,9 +1390,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import requests # To deal with HTTP requests from web services and APIs\n",
+        "import zipfile\n",
+        "from pathlib import Path"
+      ],
       "metadata": {
         "id": "J9wmBDYlH0kO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Setting up path to the data\n",
+        "data_path = Path(\"data/\")\n",
+        "images_path = data_path / \"pizza_steak_sushi\"\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "PwWeS1dySgQn"
       },
       "execution_count": null,
       "outputs": []
