--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNandLjfOXyKVj00TPsE8h+",
+      "authorship_tag": "ABX9TyPg0yLKv683YTwCinfE6s+7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1407,7 +1407,16 @@
         "# Setting up path to the data\n",
         "data_path = Path(\"data/\")\n",
         "images_path = data_path / \"pizza_steak_sushi\"\n",
-        "\n"
+        "\n",
+        "if images_path.is_dir():\n",
+        "    print(f'{images_path} directory exists.')\n",
+        "else:\n",
+        "    print(f'{images_path} not found.. creating one..')\n",
+        "    images_path.mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "    # Download data\n",
+        "    with open(data_path / \"pizza_steak_sushi.zip\", \"wb\") as f:\n",
+        ""
       ],
       "metadata": {
         "id": "PwWeS1dySgQn"
