--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPg0yLKv683YTwCinfE6s+7",
+      "authorship_tag": "ABX9TyNPgN7CEQ1wN8jrutpbSuQZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1416,7 +1416,14 @@
         "\n",
         "    # Download data\n",
         "    with open(data_path / \"pizza_steak_sushi.zip\", \"wb\") as f:\n",
-        ""
+        "        request = requests.get(\"https://github.com/mrdbourke/pytorch-deep-learning/raw/main/data/pizza_steak_sushi.zip\")\n",
+        "        print(f\"Downloading data..\")\n",
+        "        f.write(request.content)\n",
+        "\n",
+        "    # Unzipping data\n",
+        "    with zipfile.ZipFile(data_path / \"pizza_steak_sushi.zip\", 'r') as zip_ref:\n",
+        "        print(f\"Unzipping data..\")\n",
+        "        zip_ref.extractall(images_path)"
       ],
       "metadata": {
         "id": "PwWeS1dySgQn"
