--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNPgN7CEQ1wN8jrutpbSuQZ",
+      "authorship_tag": "ABX9TyO7W6PYn31o7d4jXIRD5jPs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1398,7 +1398,7 @@
       "metadata": {
         "id": "J9wmBDYlH0kO"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1426,10 +1426,43 @@
         "        zip_ref.extractall(images_path)"
       ],
       "metadata": {
-        "id": "PwWeS1dySgQn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PwWeS1dySgQn",
+        "outputId": "66d958a3-8279-49a8-b7c8-d8e9d7dfc338"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "data/pizza_steak_sushi not found.. creating one..\n",
+            "Downloading data..\n",
+            "Unzipping data..\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Preparation"
+      ],
+      "metadata": {
+        "id": "rxqRZZTSqboM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Inspect the data and think what you want to do with it.\n",
+        "-"
+      ],
+      "metadata": {
+        "id": "2zAwl2wvxduw"
+      }
     }
   ]
 }
