--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO7W6PYn31o7d4jXIRD5jPs",
+      "authorship_tag": "ABX9TyOSgEXE1MN6uSYfs4gR82MQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1458,6 +1458,7 @@
       "cell_type": "markdown",
       "source": [
         "- Inspect the data and think what you want to do with it.\n",
+        "- Image classes exist in seperate directories named after the class name.\n",
         "-"
       ],
       "metadata": {
