--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOSgEXE1MN6uSYfs4gR82MQ",
+      "authorship_tag": "ABX9TyManspiClI/x6vH2zLbqKSV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -894,31 +894,31 @@
     {
       "cell_type": "code",
       "source": [
-        "# # Trace directories\n",
+        "# Trace directories\n",
         "\n",
-        "# def trace_dir(dir_path):\n",
-        "#     \"\"\"\n",
-        "#     Walk through directories printing its contents.\n",
+        "def trace_dir(dir_path):\n",
+        "    \"\"\"\n",
+        "    Walk through directories printing its contents.\n",
         "\n",
-        "#     Args:\n",
-        "#         dir_path (str): target directory\n",
+        "    Args:\n",
+        "        dir_path (str): target directory\n",
         "\n",
-        "#     Returns:\n",
-        "#         A print out of:\n",
-        "#             number of subdirectories in dir_path\n",
-        "#             number of images (files) in each subdirectory\n",
-        "#             number of each subdirectory\n",
-        "#     \"\"\"\n",
+        "    Returns:\n",
+        "        A print out of:\n",
+        "            number of subdirectories in dir_path\n",
+        "            number of images (files) in each subdirectory\n",
+        "            number of each subdirectory\n",
+        "    \"\"\"\n",
         "\n",
-        "#     import os\n",
+        "    import os\n",
         "\n",
-        "#     for subdir_path, subdir_names, file_names in os.walk(dir_path):\n",
-        "#         print(f\"There are {len(subdir_names)} and {len(file_names)} images in '{subdir_path}'\")"
+        "    for subdir_path, subdir_names, file_names in os.walk(dir_path):\n",
+        "        print(f\"There are {len(subdir_names)} and {len(file_names)} images in '{subdir_path}'\")"
       ],
       "metadata": {
         "id": "qdaOA09GXGBC"
       },
-      "execution_count": 15,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1459,11 +1459,51 @@
       "source": [
         "- Inspect the data and think what you want to do with it.\n",
         "- Image classes exist in seperate directories named after the class name.\n",
-        "-"
+        "- Turn this data into a dataset compatible with PyTorch."
       ],
       "metadata": {
         "id": "2zAwl2wvxduw"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "trace_dir(dir_path = images_path)"
+      ],
+      "metadata": {
+        "id": "EtTx1HJHNZpY",
+        "outputId": "c1b863bd-1308-4268-be76-1bd48c6b638f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "There are 2 and 0 images in 'data/pizza_steak_sushi'\n",
+            "There are 3 and 0 images in 'data/pizza_steak_sushi/test'\n",
+            "There are 0 and 31 images in 'data/pizza_steak_sushi/test/sushi'\n",
+            "There are 0 and 19 images in 'data/pizza_steak_sushi/test/steak'\n",
+            "There are 0 and 25 images in 'data/pizza_steak_sushi/test/pizza'\n",
+            "There are 3 and 0 images in 'data/pizza_steak_sushi/train'\n",
+            "There are 0 and 72 images in 'data/pizza_steak_sushi/train/sushi'\n",
+            "There are 0 and 75 images in 'data/pizza_steak_sushi/train/steak'\n",
+            "There are 0 and 78 images in 'data/pizza_steak_sushi/train/pizza'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Tf7G4vyCNfkc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
