--- a/custom_datasets.ipynb
+++ b/custom_datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyManspiClI/x6vH2zLbqKSV",
+      "authorship_tag": "ABX9TyN0JjoYalGePtIWAqaEQUxk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1471,11 +1471,11 @@
         "trace_dir(dir_path = images_path)"
       ],
       "metadata": {
-        "id": "EtTx1HJHNZpY",
-        "outputId": "c1b863bd-1308-4268-be76-1bd48c6b638f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EtTx1HJHNZpY",
+        "outputId": "c1b863bd-1308-4268-be76-1bd48c6b638f"
       },
       "execution_count": 27,
       "outputs": [
@@ -1495,6 +1495,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- The average total number of images for the test data is 25 images.\n",
+        "- The average total number of images for the train data is 75 images."
+      ],
+      "metadata": {
+        "id": "mSu4wCZvN57b"
+      }
     },
     {
       "cell_type": "code",
